deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: nodejs
  namespace: django-todo
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: django-ctr
        image: rockybhai37/node-todo-cicd:latest
        ports:
        - containerPort: 8000
