ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: django-todo
spec:
  rules:
    - host: "djangoapp.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:       
                  number: 80
